--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ header .fa-bars {
   display: flex;
   align-items: center;
   min-height: 100vh;
-  background: url(./images/homepagePic.jpeg) no-repeat;
+  background: url(./images/picHome.avif) no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -146,7 +146,6 @@ header .fa-bars {
   color: #999;
   padding: 1rem 0;
   line-height: 1.5;
-  background-color: #ffd1dc;
 }
 .home .btn {
   font-size: 16px;
