--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap");
 
-:root{
-  --pink: #e84393
+:root {
+  --pink: #e84393;
 }
 
 * {
@@ -12,7 +12,7 @@
   outline: none;
   text-decoration: none;
   text-transform: capitalize;
-  transform: .2s linear;
+  transform: 0.2s linear;
 }
 
 html {
@@ -24,7 +24,9 @@ html {
 
 .header {
   position: fixed;
-  top: 0; left: 0;right: 0;
+  top: 0;
+  left: 0;
+  right: 0;
   background: #fff;
   padding: 2rem 9%;
   display: flex;
@@ -32,7 +34,6 @@ html {
   justify-content: space-between;
   z-index: 1000;
   box-shadow: 0.3rem 0.3rem rgb(0, 0, 0, 0.1);
-
 }
 
 header .logo {
@@ -41,7 +42,7 @@ header .logo {
   font-weight: bolder;
 }
 
-header .logo span{
+header .logo span {
   color: var(--pink);
 }
 
@@ -80,7 +81,7 @@ header .fa-bars {
 }
 
 /* media queries */
-@media (max-width:991px) {
+@media (max-width: 991px) {
   html {
     font-size: 55%;
   }
@@ -89,21 +90,22 @@ header .fa-bars {
   }
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
   html .fa-bars {
     display: block;
   }
   header .navbar {
     position: absolute;
-    top: 100%; left: 0; right: 0;
+    top: 100%;
+    left: 0;
+    right: 0;
     background: #eee;
     border-top: 0.1rem solid rgba(0, 0, 0, 0.1);
     clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
   }
 
   header #toggler:checked ~ .navbar {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);;
-
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
   header .navbar a {
     margin: 1.5rem;
@@ -112,4 +114,136 @@ header .fa-bars {
     border: 1rem solid rgba(0, 0, 0, 0.1);
     display: block;
   }
+}
+
+.home {
+  display: flex;
+  align-items: center;
+  min-height: 100vh;
+  background: url(./images/picHome.avif) no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.home .content {
+  max-width: 50rem;
+}
+
+.home .content h3 {
+  font-size: 6rem;
+  color: #333;
+}
+
+.home .content span {
+  font-size: 3.5rem;
+  color: var(--pink);
+  padding: 1rem 0;
+  line-height: 1.5;
+}
+
+.home .content p {
+  font-size: 2rem;
+  color: #999;
+  padding: 1rem 0;
+  line-height: 1.5;
+}
+.home .btn {
+  font-size: 16px;
+  color: var(--pink);
+  font-weight: bold;
+  border: 1px solid#e84393;
+  border-radius: 15px;
+  padding: 3px;
+}
+
+.about .row {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  pad: 2rem 0;
+  padding-bottom: 3rem;
+}
+
+.about .row .video-container {
+  flex: 1 1 40rem;
+  position: relative;
+}
+
+.about .row .video-container video {
+  width: 100%;
+  border: 1.5rem solid #fff;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  object-fit: cover;
+}
+
+.about .row .video-container h3 {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 3rem;
+  background: #fff;
+  width: 100%;
+  padding: 1rem 2rem;
+  text-align: center;
+  mix-blend-mode: screen;
+}
+
+.about .row .content {
+  flex: 1 1 40rem;
+}
+
+.about .row .content h3 {
+  font-size: 3rem;
+  color: #333;
+}
+
+.about .row .content p {
+  font-size: 1.5rem;
+  color: #999;
+  padding: 0.5rem 0;
+  padding-top: 1rem;
+  line-height: 1.5;
+}
+.about .btn {
+  font-size: 16px;
+  color: var(--pink);
+  font-weight: bold;
+  border: 1px solid#e84393;
+  border-radius: 15px;
+  padding: 3px;
+}
+.icons-container {
+  background: #eee;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.icons-container .icons {
+  background: #fff;
+  border: 0.1rem solid rgba(0, 0, 0, 0.1);
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  flex: 1 1 25rem;
+}
+
+.icons-container .icons img {
+  height: 5rem;
+  margin-right: 2rem;
+}
+
+.icons-container .icons h3 {
+  color: #333;
+  padding-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.icons-container .icons span {
+  color: #555;
+  font-size: 1.3rem;
 }
